--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@
     
     --image: var(--soft);
     
-    --background: #f5f5f5;
+    --background: #001d3d;
     --text: #222222;
     
     --light: var(--background);
